[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["saved_data"]  # exclude packages matching these glob patterns (empty by default)

[project]
name = "PolicyOpt"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "tqdm",
    "tensorboard",
    "numpy<=1.26.4",
    "matplotlib",
    "scikit-learn",
    "ptflops",
    "pandas",
]
